# usb_project

./: CMakeLists.txt  README.md  build  make.sh
cmake/: toolchain.cmake
driver/: document.odg  tags
driver/chip/: gd32f4xx.c
driver/core/: chip.c  dci.c
driver/gd32f4xx/hal/: hal_gc0308.c
driver/gd32f4xx/inc/: hal_gc0308.h  hal_systick.h
driver/gd32f4xx/include/: gd32f4xx_rcu.h
driver/gd32f4xx/mod/: .hal_gc0308.c.swp  dci_mod.c  gc0308_mod.c  gc0308_mod_table.h
driver/gd32f4xx/src/: gd32f4xx_dci.c  gd32f4xx_dma.c  gd32f4xx_dma.h  gd32f4xx_exmc.c  gd32f4xx_fmc.c  gd32f4xx_ipa.c  gd32f4xx_rcu.c
driver/inc/: camera.h  chip.h  module.h
fingerprint/: CMakeLists.txt  main.c
pc-tools/: CMakeLists.txt  build  libusb-sh.configure
pc-tools/_build-i386-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
pc-tools/_build-i386-linux/fingerprint/: Makefile  cmake_install.cmake  fingerprint
pc-tools/cmake/: compile.cmake
pc-tools/python/: README.txt  register.py  uartcmd.py
pc-tools/python/ui/: finger.py  setup.py  showY.py  test.py  uartcmd.py
pc-tools/uartfinger/: CMakeLists.txt  cmd.c  cmd.h  main.c  main.h  uart.c  uart.h
pc-tools/ui/: finger.reg
pc-tools/usbfinger/: .main.c.swp  CMakeLists.txt  main.c
